# rlint-py

./: .gitignore  README.md  pyproject.toml
rlint/: main.py
rlint/rules/R0001/: R0001.py
rlint/tools/: dirs_files.py  utils.py
