[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlint"
version = "0.1.0"
description = "Python custom linter"
readme = "README.md"
authors = [{ name = "ruauka" }]
requires-python = ">=3.8"
dependencies = [
    "click==8.1.3",
    "toml==0.10.2",
]

[project.urls]
Homepage = "https://github.com/ruauka/rlint-py"

[project.scripts]
rlint = "rlint.main:main"